syntax = "proto3";

package export;

service ExportService {
  rpc ExportExcel (ExportExcelRequest) returns (ExportExcelResponse);
}

message ExportExcelRequest {
  string type = 1;
}

message ExportExcelResponse {
  string fileUrl = 1;
}
