syntax = "proto3";

package uploadTask;

service UploadTaskService {
  rpc UploadTaskExcel (UploadTaskExcelRequest) returns (UploadTaskExcelResponse);
}

message UploadTaskExcelRequest {
  repeated TaskData tasks = 1;
}

message TaskData {
  string title = 1;
  string description = 2;
  string status = 3;
  int32 assignee = 4;
  string startDate = 5;
  string endDate = 6;   
}

message UploadTaskExcelResponse {
  int32 successCount = 1;
  int32 failureCount = 2;
  repeated FailedRow failedRows = 3;
}

message FailedRow {
  int32 rowNumber = 1;
  string reason = 2;
}
